@@ -132,7 +132,7 @@
 #define D3DVS_W_W	(3 << (D3DVS_SWIZZLE_SHIFT + 6))
 #define D3DVS_NOSWIZZLE	(D3DVS_X_X|D3DVS_Y_Y|D3DVS_Z_Z|D3DVS_W_W)
 #define D3DPRESENT_RATE_DEFAULT	0
-#define D3DRENDERSTATE_WRAPBIAS	128UL
+#define D3DRENDERSTATE_WRAPBIAS	__MSABI_LONG(128U)
 #define D3DSHADER_ADDRESSMODE_SHIFT	13
 #define D3DSHADER_ADDRESSMODE_MASK	(1 << D3DSHADER_ADDRESSMODE_SHIFT)
 #define D3DSHADER_COMPARISON_SHIFT	D3DSP_OPCODESPECIFICCONTROL_SHIFT
