@@ -46,10 +46,10 @@ extern "C" {
 
 #define RPC_CONTEXT_HANDLE_DEFAULT_GUARD ((void *) -4083)
 
-#define RPC_CONTEXT_HANDLE_DEFAULT_FLAGS 0x00000000UL
-#define RPC_CONTEXT_HANDLE_FLAGS 0x30000000UL
-#define RPC_CONTEXT_HANDLE_SERIALIZE 0x10000000UL
-#define RPC_CONTEXT_HANDLE_DONT_SERIALIZE 0x20000000UL
+#define RPC_CONTEXT_HANDLE_DEFAULT_FLAGS __MSABI_LONG(0x00000000U)
+#define RPC_CONTEXT_HANDLE_FLAGS __MSABI_LONG(0x30000000U)
+#define RPC_CONTEXT_HANDLE_SERIALIZE __MSABI_LONG(0x10000000U)
+#define RPC_CONTEXT_HANDLE_DONT_SERIALIZE __MSABI_LONG(0x20000000U)
 
 #define RPC_NCA_FLAGS_DEFAULT 0x00000000
 #define RPC_NCA_FLAGS_IDEMPOTENT 0x00000001
@@ -62,15 +62,15 @@ extern "C" {
 #define RPC_BUFFER_ASYNC 0x00008000
 #define RPC_BUFFER_NONOTIFY 0x00010000
 
-#define RPCFLG_MESSAGE 0x01000000UL
-#define RPCFLG_AUTO_COMPLETE 0x08000000UL
-#define RPCFLG_LOCAL_CALL 0x10000000UL
-#define RPCFLG_INPUT_SYNCHRONOUS 0x20000000UL
-#define RPCFLG_ASYNCHRONOUS 0x40000000UL
-#define RPCFLG_NON_NDR 0x80000000UL
+#define RPCFLG_MESSAGE __MSABI_LONG(0x01000000U)
+#define RPCFLG_AUTO_COMPLETE __MSABI_LONG(0x08000000U)
+#define RPCFLG_LOCAL_CALL __MSABI_LONG(0x10000000U)
+#define RPCFLG_INPUT_SYNCHRONOUS __MSABI_LONG(0x20000000U)
+#define RPCFLG_ASYNCHRONOUS __MSABI_LONG(0x40000000U)
+#define RPCFLG_NON_NDR __MSABI_LONG(0x80000000U)
 
-#define RPCFLG_HAS_MULTI_SYNTAXES 0x02000000UL
-#define RPCFLG_HAS_CALLBACK 0x04000000UL
+#define RPCFLG_HAS_MULTI_SYNTAXES __MSABI_LONG(0x02000000U)
+#define RPCFLG_HAS_CALLBACK __MSABI_LONG(0x04000000U)
 
 #define RPC_FLAGS_VALID_BIT 0x00008000
 
