@@ -39,17 +39,17 @@ extern "C" {
 
 #if (ODBCVER >= 0x0300)
 
-#define SQL_CP_OFF 0UL
-#define SQL_CP_ONE_PER_DRIVER 1UL
-#define SQL_CP_ONE_PER_HENV 2UL
+#define SQL_CP_OFF __MSABI_LONG(0U)
+#define SQL_CP_ONE_PER_DRIVER __MSABI_LONG(1U)
+#define SQL_CP_ONE_PER_HENV __MSABI_LONG(2U)
 #define SQL_CP_DEFAULT SQL_CP_OFF
 
-#define SQL_CP_STRICT_MATCH 0UL
-#define SQL_CP_RELAXED_MATCH 1UL
+#define SQL_CP_STRICT_MATCH __MSABI_LONG(0U)
+#define SQL_CP_RELAXED_MATCH __MSABI_LONG(1U)
 #define SQL_CP_MATCH_DEFAULT SQL_CP_STRICT_MATCH
 
-#define SQL_OV_ODBC2 2UL
-#define SQL_OV_ODBC3 3UL
+#define SQL_OV_ODBC2 __MSABI_LONG(2U)
+#define SQL_OV_ODBC3 __MSABI_LONG(3U)
 #endif
 
 #define SQL_ACCESS_MODE 101
@@ -100,29 +100,29 @@ extern "C" {
 #define SQL_CONN_OPT_MIN SQL_ACCESS_MODE
 #endif
 
-#define SQL_MODE_READ_WRITE 0UL
-#define SQL_MODE_READ_ONLY 1UL
+#define SQL_MODE_READ_WRITE __MSABI_LONG(0U)
+#define SQL_MODE_READ_ONLY __MSABI_LONG(1U)
 #define SQL_MODE_DEFAULT SQL_MODE_READ_WRITE
 
-#define SQL_AUTOCOMMIT_OFF 0UL
-#define SQL_AUTOCOMMIT_ON 1UL
+#define SQL_AUTOCOMMIT_OFF __MSABI_LONG(0U)
+#define SQL_AUTOCOMMIT_ON __MSABI_LONG(1U)
 #define SQL_AUTOCOMMIT_DEFAULT SQL_AUTOCOMMIT_ON
 
-#define SQL_LOGIN_TIMEOUT_DEFAULT 15UL
+#define SQL_LOGIN_TIMEOUT_DEFAULT __MSABI_LONG(15U)
 
-#define SQL_OPT_TRACE_OFF 0UL
-#define SQL_OPT_TRACE_ON 1UL
+#define SQL_OPT_TRACE_OFF __MSABI_LONG(0U)
+#define SQL_OPT_TRACE_ON __MSABI_LONG(1U)
 #define SQL_OPT_TRACE_DEFAULT SQL_OPT_TRACE_OFF
 #define SQL_OPT_TRACE_FILE_DEFAULT "\\SQL.LOG"
 
-#define SQL_CUR_USE_IF_NEEDED 0UL
-#define SQL_CUR_USE_ODBC 1UL
-#define SQL_CUR_USE_DRIVER 2UL
+#define SQL_CUR_USE_IF_NEEDED __MSABI_LONG(0U)
+#define SQL_CUR_USE_ODBC __MSABI_LONG(1U)
+#define SQL_CUR_USE_DRIVER __MSABI_LONG(2U)
 #define SQL_CUR_DEFAULT SQL_CUR_USE_DRIVER
 
 #if (ODBCVER >= 0x0300)
-#define SQL_DB_RETURN_TO_POOL 0UL
-#define SQL_DB_DISCONNECT 1UL
+#define SQL_DB_RETURN_TO_POOL __MSABI_LONG(0U)
+#define SQL_DB_DISCONNECT __MSABI_LONG(1U)
 #define SQL_DB_DEFAULT SQL_DB_RETURN_TO_POOL
 
 #define SQL_DTC_DONE __MSABI_LONG(0)
@@ -200,25 +200,25 @@ extern "C" {
 #endif
 
 #if (ODBCVER >= 0x0300)
-#define SQL_PARAM_BIND_BY_COLUMN 0UL
+#define SQL_PARAM_BIND_BY_COLUMN __MSABI_LONG(0U)
 #define SQL_PARAM_BIND_TYPE_DEFAULT SQL_PARAM_BIND_BY_COLUMN
 #endif
 
-#define SQL_QUERY_TIMEOUT_DEFAULT 0UL
+#define SQL_QUERY_TIMEOUT_DEFAULT __MSABI_LONG(0U)
 
-#define SQL_MAX_ROWS_DEFAULT 0UL
+#define SQL_MAX_ROWS_DEFAULT __MSABI_LONG(0U)
 
-#define SQL_NOSCAN_OFF 0UL
-#define SQL_NOSCAN_ON 1UL
+#define SQL_NOSCAN_OFF __MSABI_LONG(0U)
+#define SQL_NOSCAN_ON __MSABI_LONG(1U)
 #define SQL_NOSCAN_DEFAULT SQL_NOSCAN_OFF
 
-#define SQL_MAX_LENGTH_DEFAULT 0UL
+#define SQL_MAX_LENGTH_DEFAULT __MSABI_LONG(0U)
 
-#define SQL_ASYNC_ENABLE_OFF 0UL
-#define SQL_ASYNC_ENABLE_ON 1UL
+#define SQL_ASYNC_ENABLE_OFF __MSABI_LONG(0U)
+#define SQL_ASYNC_ENABLE_ON __MSABI_LONG(1U)
 #define SQL_ASYNC_ENABLE_DEFAULT SQL_ASYNC_ENABLE_OFF
 
-#define SQL_BIND_BY_COLUMN 0UL
+#define SQL_BIND_BY_COLUMN __MSABI_LONG(0U)
 #define SQL_BIND_TYPE_DEFAULT SQL_BIND_BY_COLUMN
 
 #define SQL_CONCUR_READ_ONLY 1
@@ -227,31 +227,31 @@ extern "C" {
 #define SQL_CONCUR_VALUES 4
 #define SQL_CONCUR_DEFAULT SQL_CONCUR_READ_ONLY
 
-#define SQL_CURSOR_FORWARD_ONLY 0UL
-#define SQL_CURSOR_KEYSET_DRIVEN 1UL
-#define SQL_CURSOR_DYNAMIC 2UL
-#define SQL_CURSOR_STATIC 3UL
+#define SQL_CURSOR_FORWARD_ONLY __MSABI_LONG(0U)
+#define SQL_CURSOR_KEYSET_DRIVEN __MSABI_LONG(1U)
+#define SQL_CURSOR_DYNAMIC __MSABI_LONG(2U)
+#define SQL_CURSOR_STATIC __MSABI_LONG(3U)
 #define SQL_CURSOR_TYPE_DEFAULT SQL_CURSOR_FORWARD_ONLY
 
-#define SQL_ROWSET_SIZE_DEFAULT 1UL
+#define SQL_ROWSET_SIZE_DEFAULT __MSABI_LONG(1U)
 
-#define SQL_KEYSET_SIZE_DEFAULT 0UL
+#define SQL_KEYSET_SIZE_DEFAULT __MSABI_LONG(0U)
 
-#define SQL_SC_NON_UNIQUE 0UL
-#define SQL_SC_TRY_UNIQUE 1UL
-#define SQL_SC_UNIQUE 2UL
+#define SQL_SC_NON_UNIQUE __MSABI_LONG(0U)
+#define SQL_SC_TRY_UNIQUE __MSABI_LONG(1U)
+#define SQL_SC_UNIQUE __MSABI_LONG(2U)
 
-#define SQL_RD_OFF 0UL
-#define SQL_RD_ON 1UL
+#define SQL_RD_OFF __MSABI_LONG(0U)
+#define SQL_RD_ON __MSABI_LONG(1U)
 #define SQL_RD_DEFAULT SQL_RD_ON
 
-#define SQL_UB_OFF 0UL
-#define SQL_UB_ON 01UL
+#define SQL_UB_OFF __MSABI_LONG(0U)
+#define SQL_UB_ON __MSABI_LONG(01U)
 #define SQL_UB_DEFAULT SQL_UB_OFF
 
 #if (ODBCVER >= 0x0300)
 #define SQL_UB_FIXED SQL_UB_ON
-#define SQL_UB_VARIABLE 2UL
+#define SQL_UB_VARIABLE __MSABI_LONG(2U)
 #endif
 
 #if (ODBCVER >= 0x0300)
@@ -1217,9 +1217,9 @@ extern "C" {
 #define SQL_IS_INSERT_SEARCHED __MSABI_LONG(0x00000002)
 #define SQL_IS_SELECT_INTO __MSABI_LONG(0x00000004)
 
-#define SQL_OIC_CORE 1UL
-#define SQL_OIC_LEVEL1 2UL
-#define SQL_OIC_LEVEL2 3UL
+#define SQL_OIC_CORE __MSABI_LONG(1U)
+#define SQL_OIC_LEVEL1 __MSABI_LONG(2U)
+#define SQL_OIC_LEVEL2 __MSABI_LONG(3U)
 
 #define SQL_SFKD_CASCADE __MSABI_LONG(0x00000001)
 #define SQL_SFKD_NO_ACTION __MSABI_LONG(0x00000002)
