@@ -122,20 +122,20 @@ THEMEAPI DrawThemeText(HTHEME hTheme,HDC hdc,int iPartId,int iStateId,LPCWSTR ps
 
 #if (_WIN32_WINNT >= 0x0600)
 
-#define DTT_TEXTCOLOR (1UL << 0)
-#define DTT_BORDERCOLOR (1UL << 1)
-#define DTT_SHADOWCOLOR (1UL << 2)
-#define DTT_SHADOWTYPE (1UL << 3)
-#define DTT_SHADOWOFFSET (1UL << 4)
-#define DTT_BORDERSIZE (1UL << 5)
-#define DTT_FONTPROP (1UL << 6)
-#define DTT_COLORPROP (1UL << 7)
-#define DTT_STATEID (1UL << 8)
-#define DTT_CALCRECT (1UL << 9)
-#define DTT_APPLYOVERLAY (1UL << 10)
-#define DTT_GLOWSIZE (1UL << 11)
-#define DTT_CALLBACK (1UL << 12)
-#define DTT_COMPOSITED (1UL << 13)
+#define DTT_TEXTCOLOR (__MSABI_LONG(1U) << 0)
+#define DTT_BORDERCOLOR (__MSABI_LONG(1U) << 1)
+#define DTT_SHADOWCOLOR (__MSABI_LONG(1U) << 2)
+#define DTT_SHADOWTYPE (__MSABI_LONG(1U) << 3)
+#define DTT_SHADOWOFFSET (__MSABI_LONG(1U) << 4)
+#define DTT_BORDERSIZE (__MSABI_LONG(1U) << 5)
+#define DTT_FONTPROP (__MSABI_LONG(1U) << 6)
+#define DTT_COLORPROP (__MSABI_LONG(1U) << 7)
+#define DTT_STATEID (__MSABI_LONG(1U) << 8)
+#define DTT_CALCRECT (__MSABI_LONG(1U) << 9)
+#define DTT_APPLYOVERLAY (__MSABI_LONG(1U) << 10)
+#define DTT_GLOWSIZE (__MSABI_LONG(1U) << 11)
+#define DTT_CALLBACK (__MSABI_LONG(1U) << 12)
+#define DTT_COMPOSITED (__MSABI_LONG(1U) << 13)
 #define DTT_VALIDBITS (DTT_TEXTCOLOR | DTT_BORDERCOLOR | DTT_SHADOWCOLOR | DTT_SHADOWTYPE | DTT_SHADOWOFFSET | DTT_BORDERSIZE | \
                        DTT_FONTPROP | DTT_COLORPROP | DTT_STATEID | DTT_CALCRECT | DTT_APPLYOVERLAY | DTT_GLOWSIZE | DTT_COMPOSITED)
 
