@@ -2102,7 +2102,7 @@ extern "C" {
 #define CMSG_HASHED 5
 #define CMSG_ENCRYPTED 6
 
-#define CMSG_ALL_FLAGS (~0UL)
+#define CMSG_ALL_FLAGS (~__MSABI_LONG(0U))
 #define CMSG_DATA_FLAG (1 << CMSG_DATA)
 #define CMSG_SIGNED_FLAG (1 << CMSG_SIGNED)
 #define CMSG_ENVELOPED_FLAG (1 << CMSG_ENVELOPED)
@@ -3157,7 +3157,7 @@ extern "C" {
 #define CERT_STORE_CERTIFICATE_CONTEXT 1
 #define CERT_STORE_CRL_CONTEXT 2
 #define CERT_STORE_CTL_CONTEXT 3
-#define CERT_STORE_ALL_CONTEXT_FLAG (~0UL)
+#define CERT_STORE_ALL_CONTEXT_FLAG (~__MSABI_LONG(0U))
 #define CERT_STORE_CERTIFICATE_CONTEXT_FLAG (1 << CERT_STORE_CERTIFICATE_CONTEXT)
 #define CERT_STORE_CRL_CONTEXT_FLAG (1 << CERT_STORE_CRL_CONTEXT)
 #define CERT_STORE_CTL_CONTEXT_FLAG (1 << CERT_STORE_CTL_CONTEXT)
